3/20/14 port images and strings from Java SVN repository
3/20/14 create basic directory structure and top-level files
3/20/14 created GitHub repository