@@ -1,3 +1,4 @@
+6/3/14 #13 stroke atoms
 3/20/14 port images and strings from Java SVN repository
 3/20/14 create basic directory structure and top-level files
 3/20/14 created GitHub repository
